--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,11 +15,11 @@
 <body>
     <div class="container">
       <form class="form-signin">
-        <h3 class="form-signin-heading">Please sign in</h3>
+        <h3>Welcome to SnapBiz</h3>
+        <h4>Please sign in</h4>
         <input type="text" id="inputName" class="form-control hide" placeholder="Name" autofocus="">
         <input type="email" id="inputEmail" class="form-control" placeholder="Email" autofocus="">
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" autofocus="">
-        <input type="phone" id="inputPhone" class="form-control hide" placeholder="Phone" autofocus="">
         <br>
         <button class="btn btn-lg btn-primary btn-block" type="submit" id="loginSubmit">Sign in</button>
         <button class="btn btn-lg btn-success btn-block" type="submit" id="loginNewUser">New User</button>
