--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -10,18 +10,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <link href="../css/style.css" rel="stylesheet">
+  <script src="../js/profile.js"></script>
 </head>
 <body>
     <div class="container">
-      <!-- <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
+      <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
         <input type="file"  accept="image/*" capture="environment" name="sampleFile"/>
         <input type='submit' value='Submit'/>
-      </form>  -->
+      </form> 
 
-      <div class="input-group">
+      <!-- <div class="input-group">
         <input type="file" class="form-control" accept="image/*" capture="environment" name="sampleFile">
-        <button type='submit' class="input-group-addon">Upload</button>
+        <input type='submit' class="input-group-addon" value='Upload'>
       </div>
-    </div>
+    </div> -->
 </body>
 </html>
