added some funny text below sigin

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,17 +14,28 @@
 
 <body>
     <div class="container">
-      <form class="form-signin">
-        <h3>Welcome to SnapBiz</h3>
-        <h4>Please sign in</h4>
-        <input type="text" id="inputName" class="form-control hide" placeholder="Name" autofocus="">
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email" autofocus="">
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" autofocus="">
-        <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" id="loginSubmit">Sign in</button>
-        <button class="btn btn-lg btn-success btn-block" type="submit" id="loginNewUser">New User</button>
-        <button class="btn btn-lg btn-success btn-block hide" type="submit" id="loginSignUp">Sign Up</button>
-      </form>
+        <div class="row">
+          <form class="form-signin">
+            <h3>Welcome to SnapBiz</h3>
+            <h4>Please sign in</h4>
+            <input type="text" id="inputName" class="form-control hide" placeholder="Name" autofocus="">
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email" autofocus="">
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" autofocus="">
+            <br>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" id="loginSubmit">Sign in</button>
+            <button class="btn btn-lg btn-success btn-block" type="submit" id="loginNewUser">New User</button>
+            <button class="btn btn-lg btn-success btn-block hide" type="submit" id="loginSignUp">Sign Up</button>
+            <br>
+            <i>"Turn that pile of business cards into your very own database of prospective clients."</i>
+            <p> -Ash Rotman: CEO SnapBiz</p>
+            <br>
+            <i>"Not only am I the owner of SnapBiz Inc, I'm also a member..."</i>
+            <p> -Ash Rotman: CEO SnapBiz</p>
+            <br>
+            <i>"SnapBiz changed my life. I used to be a scrub with no money and no friends. Now I'm a successful entreprenuer and I own my own yacht!"</i>
+            <p> -Fred Lintz: Devoted Member</p>
+          </form>
+        </div>
     </div> 
 
     <script src="../js/index.js"></script>
