--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -6,23 +6,77 @@
 
   <title>Snap Biz - Profile</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="../css/style.css" rel="stylesheet">
   <script src="../js/profile.js"></script>
 </head>
 <body>
-    <div class="container">
-      <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
-        <input type="file"  accept="image/*" capture="environment" name="sampleFile"/>
-        <input type='submit' value='Submit'/>
-      </form> 
+    <div class="container-fluid">
 
-      <!-- <div class="input-group">
-        <input type="file" class="form-control" accept="image/*" capture="environment" name="sampleFile">
-        <input type='submit' class="input-group-addon" value='Upload'>
+      <div class="row">
+        <div class="col-sm-4">
+        <!-- mobile view stuff goes here -->
+
+        <!-- 'Welcome {UserName}' -->
+        <div id="welcomeUser"></div>
+
+        <!-- <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
+          <input type="file"  accept="image/*" capture="environment" id="sampleFile" name="sampleFile"/>
+          <input id="uploadImageButton" type='submit' value='Submit'/>
+        </form> -->
+
+        <!-- <form name='uploadForm' id='uploadForm' encType="multipart/form-data">
+          <input type="file"  accept="image/*" capture="environment" id="sampleFile" name="sampleFile"/>
+          <input id="uploadImageButton" type='submit' value='Submit'/>
+        </form>  -->
+
+
+        <!-- Auto generated input fields with corresponding data from card -->
+                <!-- <div class="options"></div>   -->
+                  <!-- <option value="delete"></option>
+                  <option value="Name"></option>
+                  <option value="Title"></option>
+                  <option value="Company"></option>
+                  <option value="Email"></option>
+                  <option value="MobilePhone"></option>
+                  <option value="WorkPhone"></option>
+                  <option value="Address"></option>
+                  <option value="City"></option>
+                  <option value="State"></option>
+                  <option value="Zip"></option> -->
+                <!-- <div class="input"></div> -->
+        
+        </div>
+        <div class="col-sm-8 hide">
+          <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">
+              
+              <!-- desktop view stuff will go here -->
+
+
+                    <!-- MVP -->
+              <!-- Table with pre-populated prospects -->
+              <!-- buttons for exporting specified Data -->
+
+                  <!-- Bonus Buttons -->
+              <!-- buttons for Deleting Prospect -->
+              <!-- buttons for Updating Prospect -->
+              <!-- buttons for Changing Table View of Prospects -->
+
+
+            </div>
+            <div class="col-sm-1"></div>
+          </div>
+        </div>
       </div>
-    </div> -->
+    </div>
 </body>
 </html>
+
+
+
+
+
