added index html

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -17,8 +17,14 @@
 
 
         <!-- Lets Add main 'jumbotron' here with background image -'yadda,yadda,yadda' -->
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h1 class="display-3">Welcome to SnapBiz</h1>
+            <p class="lead">Simplifying your prospecting</p>
+            <button class="btn btn-primary" id="clickMe">Login</button>
+          </div>
+        </div>
 
-        <button class="btn btn-primary" id="clickMe">Login</button>
 
                     <!-- this stuff not neccesary, but maybe carousel??? -->
                     
