--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,14 +17,16 @@
 
 
         <!-- Lets Add main 'jumbotron' here with background image -'yadda,yadda,yadda' -->
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron">
           <div class="container">
-            <h1 class="display-3">Welcome to SnapBiz</h1>
+            <h1 class="display-3">Welcome to</h1>
+                <div class="logo">
+                    <img src="../background/snapBiz_logo.png">
+                </div>
             <p class="lead">Simplifying your prospecting</p>
             <button class="btn btn-primary" id="clickMe">Login</button>
           </div>
         </div>
-
 
                     <!-- this stuff not neccesary, but maybe carousel??? -->
                     
