--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,8 @@
 
     <title>Snap Biz - LogIn</title>
 
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -19,12 +21,12 @@
         <!-- Lets Add main 'jumbotron' here with background image -'yadda,yadda,yadda' -->
         <div class="jumbotron">
           <div class="container">
-            <h1 class="display-3">Welcome to</h1>
+            <h1 class="display-3"></h1>
             <p class="lead">Simplifying your prospecting</p>
             <button class="btn btn-primary" id="clickMe">Login</button>
           </div>
         </div>
-        <div class="logo">
+        <div id="logo" class="">
             <img src="../background/snapBiz_logo.png">
         </div>
 
