added some page styling, added table overflow, finished delete button methods

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div id="logo" class="">
-            <img src="../background/snapBiz_logo.png">
+            <img src="../images/snapBiz_logo.png">
         </div>
 
                     <!-- this stuff not neccesary, but maybe carousel??? -->
