--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -13,6 +13,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="../css/profile.css" rel="stylesheet">
   <script src="../js/profile.js"></script>
+  <script src="../js/CRUD_buttons.js"></script>
 </head>
 <body>
 
@@ -61,15 +62,6 @@
                   <tbody id="tbody"></tbody>
                 </table> 
               </div>
-                <!-- <div class="form-group">
-                  <div class="col-sm-3">
-                    <button class="btn btn-default" id="exportButt">Export</button>
-                    <button class="btn btn-default" id="deleteButt">Delete</button>
-                  </div>
-                  <div class="col-sm-9">
-                    <input class="form-control" id="deleteProspect" type="text" placeholder="Insert Id of Prospect to delete">
-                  </div>
-                </div> -->
                 <div class="form-inline">
                   <div class="form-group">
                     <button class="form-control btn btn-default" id="exportButt">Export</button>
@@ -86,17 +78,80 @@
                       <button class="btn btn-default" id="confirmDelete">Delete</button>
                     </span>
                   </div>
+                  <div class="form-group">
+                    <button class="form-control btn btn-default" id="upButt">Update</button>
+                  </div>
+                  <div class="input-group hide" id="input-group2">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" id="cancelUpdate">X</button>
+                    </span>
+                    <input type="text" class="form-control" id="updateProspect" placeholder="Insert Id of Prospect">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" id="confirmUpdate">Update</button>
+                    </span>
+                  </div>
                 </div>
- 
-                    <!-- MVP -->
-              <!-- Table with pre-populated prospects -->
-              <!-- buttons for exporting specified Data -->
 
-                  <!-- Bonus Buttons -->
-              <!-- buttons for Deleting Prospect -->
-              <!-- buttons for Updating Prospect -->
+                  <!-- Bonus Button-->
               <!-- buttons for Changing Table View of Prospects -->
 
+              <!-- Update Prospect Modal -->
+                <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title">Update Prospect</h3>
+                        </div>
+                        <div class="modal-body">
+                          <div id="ajaxProspect">
+                            <table class="table table-striped table-condensed">
+                              <thead>
+                                  <tr>
+                                    <th>Id</th>
+                                    <th>F.Name</th>
+                                    <th>L.Name</th>
+                                    <th>Title</th>
+                                    <th>Company</th>
+                                    <th>Email</th>
+                                    <th>Mobile</th>
+                                    <th>Work</th>                      
+                                  </tr>
+                              </thead>
+                              <!-- Table is populated with user data from mySql -->
+                              <tbody id="tbody2"></tbody>
+                            </table> 
+                          </div>
+                          <div class="form-group">
+                            <select id='updateOptions'>
+                              <option value="null">Select a Value to Update</option>
+                              <option value="firstName">First Name</option>
+                              <option value="lastName">Last Name</option>
+                              <option value="title">Title</option>
+                              <option value="company">Company</option>
+                              <option value="email">Email</option>
+                              <option value="mobilePhone">Mobile Phone</option>
+                              <option value="workPhone">Work Phone</option>
+                              <option value="address">Address</option>
+                              <option value="city">City</option>
+                              <option value="state">State</option>
+                              <option value="zip">Zip</option>
+                            </select>
+                            <div class="input-group">
+                              <input type="text" class="form-control" id="updateInput">
+                              <span class="input-group-btn">
+                                <button class="btn btn-default" id="reallyConfirmUpdate">Update</button>
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    </div>
+                  </div>
+                </div>
 
               </div>
             </div>
