--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -97,7 +97,7 @@
 
               <!-- Update Prospect Modal -->
                 <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
+                  <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h3 class="modal-title">Update Prospect</h3>
