--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -22,11 +22,12 @@
       <div class="row">
         <div class="col-sm-4">
           <nav class="navbar text-center">
-            <h2 id="welcomeUser"></h2>
+            <h3 id="welcomeUser"></h3>
           </nav>
           <div class="text-center">
-            <img src="../images/snapBiz_logo.png" width="250">
+            <img src="../images/businessCard.jpg" id="businessCard">
           </div>
+          <br>
           <form name='uploadForm' id='uploadForm' encType="multipart/form-data">
             <label class='btn btn-primary btn-block' id='fileLabel' for="sampleFile"></label>
             <input type="file"  accept="image/*" capture="environment" id="sampleFile" name="sampleFile"/>
@@ -40,11 +41,12 @@
           <!-- desktop view -->
           <div class="row">
             <div class="col-sm-12">
-              <nav class="navbar">
-                <h2 id="spaceSaver">Here's Some Random Text that will be hidden</h2>
-              </nav>
+              <br>
+              <div class="text-right">
+                  <button class="btn btn-default" id="profileLogout">Logout</button>
+              </div>
+              <br>
               <div id="dynamicTable"> 
-                <h3>Current Prospects</h3>
                 <table class="table table-striped table-hover">
                   <thead>
                       <tr>
@@ -152,7 +154,6 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
           </div>
