--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,15 +21,22 @@
         <!-- Lets Add main 'jumbotron' here with background image -'yadda,yadda,yadda' -->
         <div class="jumbotron">
           <div class="container">
-            <h1 class="display-3"></h1>
-            <p class="lead">Simplifying your prospecting</p>
-            <button class="btn btn-primary" id="clickMe">Login</button>
+            <div class="largeScreen">
+                <h1 class="display-3">Welcome to</h1>
+                <p class="lead">Simplifying your prospecting</p>
+            </div>
+            <div class="smallScreen">
+                <div class="smallLogo">
+                <img src="../images/snapBiz_logo.png" width="250">
+            </div>
           </div>
+            <button class="btn btn-primary" id="clickMe">Login</button>
         </div>
-        <div id="logo" class="">
-            <img src="../images/snapBiz_logo.png">
+        <div class="logo">
+            <img src="../images/snapBiz_logo.png"> 
         </div>
 
+       
                     <!-- this stuff not neccesary, but maybe carousel??? -->
                     
         <!-- <i>"Turn that pile of business cards into your very own database of prospective clients."</i>
