not sure what all i did

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -24,8 +24,8 @@
           <nav class="navbar text-center">
             <h3 id="welcomeUser"></h3>
           </nav>
-          <div class="text-center">
-            <img src="../images/businessCard.jpg" id="businessCard">
+          <div class="text-center" id="dynamicCard">
+            <img src="../images/businessCard.jpg" class="businessCard">
           </div>
           <br>
           <form name='uploadForm' id='uploadForm' encType="multipart/form-data">
