--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -22,11 +22,21 @@
       <div class="row">
         <div class="col-sm-4">
           <nav class="navbar text-center">
-            <h3 id="welcomeUser"></h3>
+            <h3></h3>
           </nav>
-          <div class="text-center" id="dynamicCard">
-            <img src="../images/businessCard.jpg" class="businessCard">
+            <!-- <img src="../images/businessCard.jpg" class="businessCard"> -->
+          <div id="businessCard">
+            <img src="../images/faviconPart2.png" id="favicon">
+            <h3 id="welcomeUser">John Smith</h3>
+            <p class="font" id="savvy">Savvy Business Person</p>
+            <hr class="font" id="hr">
+            <span class="font" id="cell">C: 222.333.4444</span>
+            <span class="font" id="work">W: 333.444.5555</span>
+            <p class="font" id="email">ash@gmail.com</p>
+            <p class="font" id="address">1555 W Business Cr, Unit 3</p>
+            <p class="font" id="city">Some Town, CO 80111</p>
           </div>
+          
           <br>
           <form name='uploadForm' id='uploadForm' encType="multipart/form-data">
             <label class='btn btn-primary btn-block' id='fileLabel' for="sampleFile"></label>
