added back desktopView Id

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -43,7 +43,7 @@
                 <div id="dynamicForm"></div> 
             </div>
             <!-- desktop view -->
-            <div class="col-sm-8">
+            <div class="col-sm-8" id="desktopView">
                 <br>
                 <div class="text-right">
                     <button class="btn btn-default" id="profileLogout">Logout</button>
