--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -77,6 +77,7 @@
                 <div class="form-inline">
                   <div class="form-group">
                     <button class="form-control btn btn-default" id="exportButt">Export</button>
+                    <a href="" id="hiddenAnchor" target="_blank"></a>
                   </div>
                   <div class="form-group">
                     <button class="form-control btn btn-default" id="deleteButt">Delete</button>
