--- a/public/html/index.html
+++ b/public/html/index.html
@@ -40,9 +40,9 @@
                     <h4>Please sign in</h4>
                 </div>
                 <div class="modal-body">
-                    <input type="text" id="inputName" class="form-control hide" placeholder="Name" autofocus="">
-                    <input type="email" id="inputEmail" class="form-control" placeholder="Email" autofocus="">
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" autofocus="">
+                    <input type="text" id="inputName" class="form-control hide" placeholder="Name">
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Email" autofocus>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Password">
                     <br>
                     <button class="btn btn-lg btn-primary btn-block" id="loginSubmit">Sign in</button>
                     <button class="btn btn-lg btn-success btn-block" id="loginNewUser">New User</button>
