--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -23,6 +23,9 @@
         <div class="row">
             <div class="col-sm-4">
                 <br>
+                <div class="text-right">
+                    <button class="btn btn-default" id="profileLogoutMobile">Logout</button>
+                </div>
                 <br>
                 <br>
                 <div id="businessCard">
@@ -48,7 +51,7 @@
             <div class="col-sm-8" id="desktopView">
                 <br>
                 <div class="text-right">
-                    <button class="btn btn-default" id="profileLogout">Logout</button>
+                    <button class="btn btn-default" id="profileLogoutDesktop">Logout</button>
                 </div>
                 <br>
                 <div id="dynamicTable"> 
